# vyper

./: .gitignore  .guardianrc  Dockerfile  LICENSE  README.md  pyproject.toml  vyper_guard_lsp.py
.github/workflows/: ci.yml
docs/: CHANGELOG.md  DETECTORS.md  INSTALLATION.md  MASTER_IMPLEMENTATION_PHASES.md  README.md  USAGE.md  flow.md
docs/examples/: README.md  safe_vault.vy  token.vy  vulnerable_vault.vy
src/guardian/: __init__.py  __main__.py  cli.py  models.py
src/guardian/agents/: __init__.py  adk.py  llm_triage.py
src/guardian/analyzer/: __init__.py  ai_triage.py  ast_parser.py  benchmark.py  compiler_check.py  confidence.py  semantic.py  static.py  vyper_detector.py
src/guardian/db/: __init__.py  detector_rules.json  fix_templates.json  known_issues.json  vulnerabilities.py
src/guardian/explorer/: __init__.py  client.py
src/guardian/monitor/: __init__.py  alerting.py  baseline.py  chain_watcher.py  pattern_matcher.py  tx_analyzer.py
src/guardian/remediation/: __init__.py  ast_manipulator.py  fix_generator.py  templates.py  validator.py
src/guardian/reporting/: __init__.py  formatter.py  html_exporter.py  json_exporter.py  markdown_exporter.py  sarif_exporter.py  score.py
src/guardian/utils/: __init__.py  config.py  helpers.py  logger.py
test_contracts/: 01_reentrancy_vault.fixed.vy  01_reentrancy_vault.vy  02_unsafe_raw_call.vy  03_missing_events.vy  04_timestamp_dependence.vy  05_integer_overflow.vy  06_unprotected_selfdestruct.vy  07_dangerous_delegatecall.vy  08_unprotected_state.vy  09_send_in_loop.vy  10_unchecked_subtraction.vy  11_cei_violation.vy  12_old_compiler.vy  13_safe_contract.vy  14_nightmare_all_vulns.fixed.vy  14_nightmare_all_vulns.vy  15_dex_amm_large.vy  16_lending_protocol_large.vy  17_governance_large.vy  18_staking_vault_large.vy  19_multisig_vault_large.vy  20_empty_file.vy  21_syntax_error.vy  22_integer_underflow.vy  23_classic_reentrancy.vy  24_timestamp_manipulation.vy  26_extreme.vy
tests/: conftest.py
tests/fixtures/golden/: report.ai_triage.json  report.ai_triage.policy.deprecated.json  report.ai_triage.section.deprecated.md  report.ai_triage.section.md  report.cli.txt  report.json  report.md
tests/fixtures/sample_contracts/: complex_defi.vy  reentrancy_example.vy  safe_token.vy  vulnerable_vault.vy
tests/test_analyzer/: test_agent_cli.py  test_ai_config_cli.py  test_ai_llm_cli.py  test_ai_triage.py  test_benchmark.py  test_cli_audit.py  test_cli_config_precedence.py  test_cli_contract.py  test_cli_diff.py  test_cli_stats_graph.py  test_cli_unification.py  test_confidence_policy.py  test_detectors.py  test_explainability.py  test_semantic.py  test_semantic_context.py  test_static.py
tests/test_explorer/: test_cli_analyze_address.py  test_cli_explorer.py  test_explorer_client.py  test_explorer_config_cli.py
tests/test_monitor/: test_monitor.py
tests/test_remediation/: test_cli_fix.py  test_code_patcher.py  test_fix_generator.py  test_validator.py
tests/test_reporting/: test_db_schema.py  test_exporters_golden.py  test_sarif_exporter.py  test_spec_contracts.py
